--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
     "file-loader": "^6.2.0",
+    "formik": "^2.4.5",
+    "formik-chakra-ui": "^1.6.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
