--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
+    "chakra-ui-steps": "^2.1.0",
     "file-loader": "^6.2.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
