--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.5.1",
     "chakra-ui-steps": "^2.1.0",
     "file-loader": "^6.2.0",
     "formik": "^2.4.5",
@@ -22,6 +25,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
