--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
+    "bpmn-js": "^14.2.0",
+    "bpmn-font": "^0.10.0",
+    "bpmn-js-cli": "^2.0.2",
+    "bpmn-js-properties-panel": "^0.37.5",
+    "camunda-bpmn-moddle": "^4.4.1",
     "chakra-ui-steps": "^2.1.0",
     "file-loader": "^6.2.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "inherits": "^2.0.3",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
