--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
-    "bpmn-js": "^14.2.0",
     "bpmn-font": "^0.10.0",
+    "bpmn-js": "^14.2.0",
     "bpmn-js-cli": "^2.0.2",
     "bpmn-js-properties-panel": "^0.37.5",
     "camunda-bpmn-moddle": "^4.4.1",
@@ -33,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "xml-js": "^1.6.11",
     "yup": "^1.3.2"
   },
   "devDependencies": {
