--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^10.16.4",
     "inherits": "^2.0.3",
     "next": "13.5.4",
+    "patch-package": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
