--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "camunda-bpmn-moddle": "^4.4.1",
     "chakra-ui-steps": "^2.1.0",
     "file-loader": "^6.2.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "inherits": "^2.0.3",
