--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
+    "jest-diff": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3",
