--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "patch-package": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "typescript-graph": "^0.3.0",
     "xml-js": "^1.6.11",
