--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "typescript-graph": "^0.3.0",
     "xml-js": "^1.6.11",
