--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "patch-package": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
