--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chakra-ui-steps": "^2.1.0",
     "date-fns": "^2.30.0",
     "dayzed": "^3.2.3",
+    "diagram-js-grid": "^0.2.0",
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
