--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.1.5",
     "@chakra-ui/react": "^2.8.1",
+    "@choc-ui/chakra-autocomplete": "^5.2.9",
     "@emotion/react": "^11.11.1",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.11.0",
@@ -41,12 +42,14 @@
     "inherits": "^2.0.3",
     "next": "13.5.4",
     "patch-package": "^8.0.0",
+    "prism-react-renderer": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript-graph": "^0.3.0",
     "xml-js": "^1.6.11",
     "yup": "^1.3.2"
