--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chakra-dayzed-datepicker": "^0.2.10",
     "chakra-ui-autocomplete": "^1.4.5",
     "chakra-ui-steps": "^2.1.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dayzed": "^3.2.3",
     "diagram-js-grid": "^0.2.0",
@@ -44,6 +45,7 @@
     "patch-package": "^8.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
