--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "immutability-helper": "^3.1.1",
     "inherits": "^2.0.3",
     "next": "13.5.4",
     "patch-package": "^8.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18",
+    "react-bbox-annotator": "^0.3.0",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
