Connect to document template API

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_DEV_API=https://edu-rpa-api.dev-quangkhanh.xyz
+NEXT_PUBLIC_AWS_REGION=ap-southeast-2
+NEXT_PUBLIC_AWS_IDENTITY_POOL_ID=ap-southeast-2:c0509314-9bb7-4526-b1eb-65421105268a
