--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-syntax-highlighter": "^15.5.0",
+    "sharp": "^0.33.2",
     "typescript-graph": "^0.3.0",
     "xml-js": "^1.6.11",
     "yup": "^1.3.2"
