--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,8 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
-      - name: Login to Vercel
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: vercel login --token $VERCEL_TOKEN
+      - name: Authenticate with Vercel
+        run: vercel --auth ${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy to Vercel
         run: vercel --prod
