--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}  --force
+
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }} --force
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} --force
