build: update deploy EduRPA to S3

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "patch-package",
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "test": "jest"
