--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,6 @@ NEXT_PUBLIC_DEV_API=https://edu-rpa-api.dev-quangkhanh.xyz
 NEXT_PUBLIC_AWS_API_GATEWAY_URL=https://hei2idvln1.execute-api.ap-southeast-2.amazonaws.com
 NEXT_PUBLIC_AWS_ROBOT_API_GATEWAY_URL=https://54hypceknb.execute-api.ap-southeast-1.amazonaws.com
 NEXT_PUBLIC_URL=https://edu-rpa-frontend.vercel.app
+
+ROBOT_FOLDER=/home/ec2-user/robot
+ROBOT_CREDENTIAL_FOLDER=/home/ec2-user/robot/devdata
