Update setup provider

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_DEV_API=http://localhost:8080
+NEXT_PUBLIC_DEV_API=https://edu-rpa-api.dev-quangkhanh.xyz
 NEXT_PUBLIC_AWS_API_GATEWAY_URL=https://hei2idvln1.execute-api.ap-southeast-2.amazonaws.com
 NEXT_PUBLIC_AWS_ROBOT_API_GATEWAY_URL=https://54hypceknb.execute-api.ap-southeast-1.amazonaws.com
 NEXT_PUBLIC_URL=http://localhost:3000
