integrate pubnub for real-time noti

--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "next": "^13.5.3",
     "patch-package": "^8.0.0",
     "prism-react-renderer": "^2.3.0",
+    "pubnub": "^7.6.3",
+    "pubnub-react": "^3.0.2",
     "react": "^18.2.0",
     "react-bbox-annotator": "^0.3.0",
     "react-chartjs-2": "^5.2.0",
@@ -70,6 +72,7 @@
     "@types/jest": "^29.5.6",
     "@types/node": "^20",
     "@types/prop-types": "^15.7.11",
+    "@types/pubnub": "^7.4.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
