--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ NEXT_PUBLIC_DEV_API=https://edu-rpa-api.dev-quangkhanh.xyz
 NEXT_PUBLIC_AWS_API_GATEWAY_URL=https://hei2idvln1.execute-api.ap-southeast-2.amazonaws.com
 NEXT_PUBLIC_AWS_ROBOT_API_GATEWAY_URL=https://54hypceknb.execute-api.ap-southeast-1.amazonaws.com
 NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_PUBNUB_SUBSCRIBE_KEY=sub-c-5872389b-5af4-46df-aa1d-1a11a95f833a
 
 ROBOT_FOLDER=/home/ec2-user/robot
 ROBOT_CREDENTIAL_FOLDER=/home/ec2-user/robot/devdata
