Add check stage before publish robot

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,5 @@ NEXT_PUBLIC_PUBNUB_SUBSCRIBE_KEY=sub-c-5872389b-5af4-46df-aa1d-1a11a95f833a
 
 NEXT_PUBLIC_ROBOT_FOLDER=/home/ec2-user/robot
 NEXT_PUBLIC_ROBOT_CREDENTIAL_FOLDER=/home/ec2-user/robot/devdata
+
+NEXT_PUBLIC_ROBOT_VALIDATE_API_URL=https://71b8ltjll2.execute-api.ap-southeast-1.amazonaws.com
